# wizzair-aycf-availability

./: .gitignore  Containerfile  LICENSE  README.md  aggregate.py  fetch.py  main.py  parse.py  pyproject.toml
.github/workflows/: deploy-pages.yaml  scrape.yaml
data/: 2025-03-15T07:00:01.csv  2025-03-16T07:00:06.csv  2025-03-16T07_00_06.csv  2025-03-17T07:00:01.csv  2025-03-18T07:00:03.csv  2025-03-18T07_00_03.csv  2025-03-19T07:00:04.csv  2025-03-20T07:00:00.csv  2025-03-20T07_00_00.csv  2025-03-21T07:00:01.csv  2025-03-22T07_00_02.csv  2025-03-23T07:00:04.csv  2025-03-24T07_00_01.csv  2025-03-25T07:00:03.csv  2025-03-26T07:00:01.csv  2025-03-27T07_00_04.csv  2025-03-28T07:00:02.csv  2025-03-29T07:00:02.csv  2025-03-30T07_00_03.csv  2025-03-31T07_00_03.csv  2025-04-01T07:00:02.csv  2025-04-02T07_00_03.csv  2025-04-03T07_00_02.csv  2025-04-04T07:00:07.csv  2025-04-05T07_00_03.csv  2025-04-06T07:00:01.csv  2025-04-07T07:00:01.csv  2025-04-08T07:00:05.csv  2025-04-09T07_00_05.csv  2025-04-10T07_00_06.csv  2025-04-11T07_00_03.csv  2025-04-12T07:00:02.csv  2025-04-13T07:00:02.csv  2025-04-14T07_00_01.csv  2025-04-15T07:00:01.csv  2025-04-16T07:00:01.csv  2025-04-17T07_00_01.csv  2025-04-18T07:00:02.csv  2025-04-19T07:00:01.csv  2025-04-20T07_00_01.csv  (+443 more)
docs/: README.md  aggregated-data.json  app.py  dashboard_data.json  generate_data.py  index.html  main.js  pyproject.toml  style.css
worker/: README.md  package-lock.json  package.json  wrangler.toml
worker/src/: index.ts
