[project]
name = "wizz-aycf-data"
version = "0.1.0"
description = "WizzAir All You Can Fly data scraper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py>=1.0.0",
    "ghostscript>=0.7",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "requests>=2.32.3",
    "typer>=0.15.2",
]

[tool.uv.workspace]
members = [
    "docs/flight-analytics",
]
