[project]
name = "flight-analytics"
version = "0.1.0"
description = "Streamlit app for Wizz Air flight analytics"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
